--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
+body {
+     font-family: 'Roboto Mono', monospace;
+     width: 100vw;
+     height: 100vh;
+     background: linear-gradient(180deg, #0055ff 0%, rgb(0, 153, 255) 100%);
+     overflow: hidden;
+     padding: 0;
+     margin: 0;
+     display: flex;
+     justify-content: center;
+     /* align-items: center; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#root {
+     width: 100%;
+     height: 100%;
+     overflow: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul,
+li {
+     margin: 0;
+     padding: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ul {
+     padding: 25px;
+     position: absolute;
+     top: 100px;
+     width: 230px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li {
+     list-style: none;
+     margin-bottom: 20px;
+     display: flex;
+     align-items: center;
+     cursor: pointer;
 }
