--- a/src/components/form/common.module.css
+++ b/src/components/form/common.module.css
@@ -46,10 +46,9 @@
 /* ===================== BASIC STYLING ===================== */
 * {
      box-sizing: border-box;
-     font-family: 'Lato', sans-serif;
 }
 
-html,
+/* html,
 body {
      margin: 0;
      padding: 0;
@@ -60,7 +59,7 @@ body {
      font-size: 16px;
      overflow: hidden;
      background: -moz-linear-gradient(top, #053777 0%, #00659b 100%);
-     /* FF3.6+ */
+     
      background: -webkit-gradient(
           linear,
           left top,
@@ -68,24 +67,18 @@ body {
           color-stop(0%, #053777),
           color-stop(100%, #00659b)
      );
-     /* Chrome,Safari4+ */
+    
      background: -webkit-linear-gradient(top, #053777 0%, #00659b 100%);
-     /* Chrome10+,Safari5.1+ */
+     
      background: -o-linear-gradient(top, #053777 0%, #00659b 100%);
-     /* Opera 11.10+ */
+    
      background: -ms-linear-gradient(top, #053777 0%, #00659b 100%);
-     /* IE10+ */
+     
      background: linear-gradient(to bottom, #053777 0%, #00659b 100%);
-     /* W3C */
-}
+   
+} */
 
-h1 {
-     text-align: center;
-     margin: 50px auto;
-     font-weight: 100;
-}
-
-label {
+.leftLabel {
      font-weight: 500;
      display: block;
      margin: 4px 0;
@@ -93,13 +86,14 @@ label {
      font-size: 13px;
      overflow: hidden;
 }
-label span {
+.rightLabel {
      float: right;
      text-transform: none;
      font-weight: 200;
      line-height: 1em;
      font-style: italic;
      opacity: 0.8;
+     color: #fff;
 }
 
 .form-controll {
@@ -117,22 +111,19 @@ label span {
      outline: -webkit-focus-ring-color auto 5px;
 }
 
-button {
+.btn {
+     width: 100%;
+     height: 2rem;
+     font-size: 16px;
+     font-weight: 700;
+     border-radius: 0.2rem;
      padding: 8px 30px;
      background: rgba(255, 255, 255, 0.8);
      color: #053777;
      text-transform: uppercase;
-     font-weight: 600;
-     font-size: 11px;
      border: 0;
      text-shadow: 0 1px 2px #fff;
      cursor: pointer;
-}
-
-.form-group {
-     max-width: 500px;
-     margin: auto;
-     margin-bottom: 30px;
 }
 
 .back-to-article {
